# crest-mlip

./: .gitignore  CHANGES.md  CMakeLists.txt  README.md  crest_batch_submit.sh  install_snellius.md  meson_options.txt
.github/workflows/: build-CI.yml
assets/template/: metadata.f90
config/: CMakeLists.txt  meson.build
environments/: mace-cpu.yml  mace-cuda.yml  uma-cpu.yml  uma-cuda.yml
examples/: README.md  conformer_search_mace_libtorch.toml  conformer_search_uma.toml  ethane.xyz  optimization_mace_pymlip.toml  singlepoint_ase_socket.toml
scripts/: export_mace.py  export_model.py
src/: choose_settings.f90  classes.f90  cleanup.f90  confparse.f90  crest_main.f90  legacy_wrappers.f90  printouts.f90  sigterm.f90
src/algos/: CMakeLists.txt  dynamics.f90  meson.build  numhess.f90  optimization.f90  parallel.f90  scan.f90  setuptest.f90  singlepoint.f90  worker_io.f90  worker_md.f90  worker_pool_mod.f90
src/calculator/: CMakeLists.txt  ase_socket_bridge.c  ase_socket_bridge.h  calc_type.f90  calculator.F90  calculator_ase_socket.F90  calculator_libtorch.F90  calculator_pymlip.F90  gfnff_api.F90  libtorch_bridge.cpp  libtorch_bridge.h  meson.build  process_bridge.c  process_bridge.h  pymlip_bridge.c  pymlip_bridge.h  subprocess_engrad.f90  tblite_api.F90  worker_pool.c  worker_pool.h
src/dynamics/: shake_module.f90
src/optimize/: ancopt.f90  optimize_module.f90  rfo.f90
src/parsing/: parse_calcdata.f90
src/python_server/: crest_ase_server.py  iso_atom_elem_refs.yaml  (+2 more)
test/: test_ase_socket.py  test_export_scripts.py  test_gfnff.F90  test_mlip_integration.sh
(+4 files in other folders)
